--- a/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -42,23 +42,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-04-25 20:19:29--  https://s3.amazonaws.com/video.udacity-data.com/topher/2019/January/5c4147f9_data/data.zip\n",
-      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.65.11\n",
-      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.65.11|:443... connected.\n",
+      "--2021-06-13 18:54:25--  https://s3.amazonaws.com/video.udacity-data.com/topher/2019/January/5c4147f9_data/data.zip\n",
+      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.217.170.200\n",
+      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.217.170.200|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 113826 (111K) [application/zip]\n",
-      "Saving to: ‘data.zip.1’\n",
+      "Saving to: ‘data.zip.2’\n",
       "\n",
-      "data.zip.1          100%[===================>] 111.16K  --.-KB/s    in 0.002s  \n",
+      "data.zip.2          100%[===================>] 111.16K  --.-KB/s    in 0.002s  \n",
       "\n",
-      "2021-04-25 20:19:29 (49.0 MB/s) - ‘data.zip.1’ saved [113826/113826]\n",
+      "2021-06-13 18:54:26 (58.4 MB/s) - ‘data.zip.2’ saved [113826/113826]\n",
       "\n",
       "Archive:  data.zip\n",
       "replace data/.DS_Store? [y]es, [n]o, [A]ll, [N]one, [r]ename: ^C\n"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "4  g0pA_taske.txt    e      non"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "9  g0pB_taske.txt    e         1      1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "4  g0pA_taske.txt    e         0      0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
        "4  dynamic programming is an algorithm design tec...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
        "9  dynamic programming is a method for solving ma...     test  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1208,33 +1208,13 @@
        "[70 rows x 6 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "complete_df.iloc[complete_df.loc[complete_df.Datatype == 'train'].index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'in mathematics and computer science dynamic programming is a method of solving problems that exhibit the properties of overlapping subproblems and optimal substructure described below  the method takes much less time than naive methods the term was originally used in the 1940s by richard bellman to describe the process of solving problems where one needs to find the best decisions one after another by 1953 he had refined this to the modern meaning the field was founded as a systems analysis and engineering topic that is recognized by the ieee bellman s contribution is remembered in the name of the bellman equation a central result of dynamic programming which restates an optimization problem in recursive form the word programming in dynamic programming has no particular connection to computer programming at all and instead comes from the term mathematical programming  a synonym for optimization thus the program is the optimal plan for action that is produced for instance a finalized schedule of events at an exhibition is sometimes called a program programming in this sense means finding an acceptable plan of action an algorithm optimal substructure means that optimal solutions of subproblems can be used to find the optimal solutions of the overall problem for example the shortest path to a goal from a vertex in a graph can be found by first computing the shortest path to the goal from all adjacent vertices and then using this to pick the best overall path as shown in figure 1 in general we can solve a problem with optimal substructure using a three step process 1 break the problem into smaller subproblems 2 solve these problems optimally using this three step process recursively 3 use these optimal solutions to construct an optimal solution for the original problem the subproblems are themselves solved by dividing them into sub subproblems and so on until we reach some simple case that is solvable in constant time figure 2 the subproblem graph for the fibonacci sequence that it is not a tree but a dag indicates overlapping subproblems to say that a problem has overlapping subproblems is to say that the same subproblems are used to solve many different larger problems for example in the fibonacci sequence f3  f1  f2 and f4  f2  f3  computing each number involves computing f2 because both f3 and f4 are needed to compute f5 a naive approach to computing f5 may end up computing f2 twice or more this applies whenever overlapping subproblems are present a naive approach may waste time recomputing optimal solutions to subproblems it has already solved in order to avoid this we instead save the solutions to problems we have already solved then if we need to solve the same problem later we can retrieve and reuse our already computed solution this approach is called memoization not memorization although this term also fits  if we are sure we won t need a particular solution anymore we can throw it away to save space in some cases we can even compute the solutions to subproblems we know that we ll need in advance '"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "complete_df.loc[(complete_df['Datatype']=='orig') & (complete_df['Task']==task)]['Text'].values[0]"
    ]
   },
   {
@@ -1303,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1796,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2034,7 @@
        "9  0.091743  0.064516  0.597458  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2079,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2326,7 +2306,7 @@
     "    \n",
     "    # get the test features and labels\n",
     "    test_x = features_df[selected_features].iloc[test_idx].to_numpy()\n",
-    "    test_y = complete_df.iloc[train_idx].Class.to_numpy()\n",
+    "    test_y = complete_df.iloc[test_idx].Class.to_numpy()\n",
     "    \n",
     "    return (train_x, train_y), (test_x, test_y)\n",
     "    "
@@ -2343,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2461,7 +2441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2496,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2554,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2577,19 +2557,31 @@
       "[70 rows x 4 columns]\n",
       "Path created: plagiarism_data/train.csv\n",
       "    0         0         1         2\n",
-      "0   0  1.000000  0.835979  0.820755\n",
+      "0   1  1.000000  0.835979  0.820755\n",
       "1   1  0.765306  0.454545  0.621711\n",
       "2   1  0.884444  0.064516  0.597458\n",
-      "3   0  0.619048  0.000000  0.427835\n",
-      "4   0  0.920000  0.179104  0.775000\n",
-      ".. ..       ...       ...       ...\n",
-      "65  1       NaN       NaN       NaN\n",
-      "66  1       NaN       NaN       NaN\n",
-      "67  1       NaN       NaN       NaN\n",
-      "68  1       NaN       NaN       NaN\n",
-      "69  0       NaN       NaN       NaN\n",
-      "\n",
-      "[70 rows x 4 columns]\n",
+      "3   1  0.619048  0.000000  0.427835\n",
+      "4   1  0.920000  0.179104  0.775000\n",
+      "5   1  0.992674  0.958491  0.993056\n",
+      "6   0  0.412698  0.000000  0.346667\n",
+      "7   0  0.462687  0.000000  0.189320\n",
+      "8   0  0.581152  0.000000  0.247423\n",
+      "9   0  0.584211  0.000000  0.294416\n",
+      "10  0  0.566372  0.000000  0.258333\n",
+      "11  0  0.481481  0.000000  0.278912\n",
+      "12  1  0.619792  0.005435  0.341584\n",
+      "13  1  0.921739  0.463964  0.929412\n",
+      "14  1  1.000000  0.842520  1.000000\n",
+      "15  1  0.861538  0.000000  0.504717\n",
+      "16  1  0.626168  0.067093  0.558559\n",
+      "17  1  1.000000  0.936759  0.996700\n",
+      "18  0  0.383838  0.000000  0.178744\n",
+      "19  1  1.000000  0.883895  0.854671\n",
+      "20  0  0.613924  0.000000  0.298343\n",
+      "21  1  0.972763  0.694779  0.927083\n",
+      "22  1  0.962810  0.495726  0.909804\n",
+      "23  0  0.415254  0.000000  0.177419\n",
+      "24  0  0.532189  0.000000  0.245833\n",
       "Path created: plagiarism_data/test.csv\n"
      ]
     }
