minor fix for project 2

--- a/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -2457,7 +2457,7 @@
     "        os.makedirs(data_dir)\n",
     "    \n",
     "    # your code here\n",
-    "    output = pd.concat([pd.Series(y), pd.DataFrame(x)],axis=1)\n",
+    "    output = pd.concat([pd.Series(y), pd.DataFrame(x)],axis=1).dropna()\n",
     "    output.to_csv(str(data_dir)+'/'+str(filename), header=False, index= False)\n",
     "    print(output)\n",
     "    \n",
